--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@pbe/react-yandex-maps": "^1.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-router": "^6.25.1",
+    "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
